tests/baselines/reference/parserES5ForOfStatement10.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement10.ts(1,17): error TS2304: Cannot find name 'X'.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement10.ts (1 errors) ====
    for (const v of X) {
                    ~
!!! error TS2304: Cannot find name 'X'.
    }